--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/temp/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.38aa3655.js"></script>
-    <link rel="stylesheet" href="/assets/index.902947b5.css">
+    <script type="module" crossorigin src="/temp/assets/index.85151e91.js"></script>
+    <link rel="stylesheet" href="/temp/assets/index.902947b5.css">
   </head>
   <body>
     <div id="app"></div>
